12-kubernetes-05-cni/policy-allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: hello-world
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: hello-world
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
